--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   google_sign_in: ^4.1.1
   firebase_storage: ^3.1.1
   firebase_auth: ^0.15.3
-  provider:
+  provider: ^4.1.2
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
