--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   
-  cloud_firestore: ^0.13.0+1
-  image_picker: ^0.6.2+3
+  cloud_firestore: 
+  image_picker: 
   google_sign_in: ^4.1.1
-  firebase_storage: ^3.1.1
+  firebase_storage: 
   firebase_auth: ^0.15.3
   provider: ^4.1.2
   carousel_pro: ^1.0.0
