--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^0.15.3
   provider: ^4.1.2
   carousel_pro: ^1.0.0
+  flutter_staggered_grid_view:
 
 dev_dependencies:
   flutter_test:
