--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   carousel_pro: ^1.0.0
   flutter_staggered_grid_view: ^0.3.0
   transparent_image: ^1.0.0
+  # lista de contatos
+  alphabet_list_scroll_view: ^1.0.6
+  faker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
