--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   
-  cloud_firestore: 
-  image_picker: 
+  cloud_firestore:
   google_sign_in: ^4.1.1
   firebase_storage: 
   firebase_auth: ^0.15.3
@@ -41,6 +40,8 @@ dependencies:
   # lista de contatos
   alphabet_list_scroll_view: ^1.0.6
   faker: ^1.2.1
+  # Imagem da galeria
+  image_picker: ^0.6.7
 
 dev_dependencies:
   flutter_test:
