--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   
-  cloud_firestore:
+  cloud_firestore: 
   google_sign_in: ^4.1.1
   firebase_storage: 
   firebase_auth: ^0.15.3
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^0.6.7
   # Editando a imagem antes de adicionar
   image_cropper: ^1.2.2
+  # Para adicionar uma chave única
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
